# ArbitrageX

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/core/: calculations.py  config.py  credentials.py  dependencies.py  events.py  exceptions.py  exchange_errors.py  kill_switch.py  logging.py  state_machine.py  trading_modes.py
backend/app/db/: redis.py  seed.py  session.py
backend/app/exchanges/: __init__.py  base.py  binance.py  bybit.py  factory.py  mock.py  okx.py  public_adapter.py
backend/app/models/: __init__.py  alert.py  analytics.py  balance.py  base.py  exchange.py  execution.py  market.py  opportunity.py  order.py  risk.py  strategy.py  symbol.py  system.py
backend/app/schemas/: __init__.py  alert.py  analytics.py  common.py  exchange.py  execution.py  inventory.py  market.py  opportunity.py  order.py  risk.py  strategy.py  system.py  ws.py
backend/app/services/: __init__.py  alert_service.py  analytics.py  audit.py  execution_coordinator.py  execution_engine.py  execution_planner.py  inventory.py  live_guardrails.py  live_risk_rules.py  market_data.py  order_tracker.py  risk_engine.py  scanner.py  simulation.py
backend/app/utils/: helpers.py
backend/scripts/: init_db.sh  wait_for_db.py
backend/tests/: conftest.py  test_alert_service.py  test_audit.py  test_calculations.py  test_execution_coordinator.py  test_execution_planner.py  test_inventory.py  test_live_trading.py  test_market_data.py  test_mock_exchange.py  test_risk_engine.py  test_scanner.py  test_simulation.py  test_state_machine.py  test_utils.py
deploy/: dev.sh  (+1 more)
(+84 files in other folders)
