[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-arbitrage"
version = "0.1.0"
description = "Production-grade cryptocurrency arbitrage system"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "aiomysql>=0.2.0,<1.0",
    "PyMySQL>=1.1,<2.0",
    "cryptography>=43.0,<44.0",
    "alembic>=1.14,<2.0",
    "redis[hiredis]>=5.2,<6.0",
    "httpx>=0.28,<1.0",
    "websockets>=14.0,<15.0",
    "loguru>=0.7,<1.0",
    "ccxt>=4.4,<5.0",
    "orjson>=3.10,<4.0",
    "python-dotenv>=1.0,<2.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.9,<1.0",
    "mypy>=1.14,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/db/seed.py", "*/alembic/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 60
